<resources>
    <string name="app_name">MediScan</string>
    <string name="title_activity_presentation_details">Détails du médicament %1$s</string>
    <string name="substances">Substances</string>
    <string name="empty_substance">Aucune substance</string>
    <string name="empty_interaction">Aucune interaction avec les autres médicaments scannés</string>
    <string name="interactions">Interactions</string>
    <string name="refDosage">pour %1$s</string>
    <string name="avis">Avis</string>
    <string name="empty_avis">Aucun avis disponible</string>
    <string name="dossier_has">Dossier HAS %1$s</string>
    <string name="disclaimer">Les informations contenues dans cette application sont mises à disposition à titre informatif uniquement. Ne pas hésiter à demander l\'avis de votre médecin ou votre pharmacien.</string>
    <string name="btn_expand">></string>
    <string name="ph_right">Texte à droite</string>
    <string name="ph_nomSpecialite">nomSpecialite</string>
    <string name="ph_libellePresentation">libellePresentation</string>
    <string name="expiration">Expiration:</string>
    <string name="ph_date">05/2020</string>
    <string name="lot_n">Lot N°</string>
    <string name="ph_lot">HF52521</string>
    <string name="ph_conditionprescription">conditionPrescription</string>
    <string name="btn_voir_la_notice">Voir la notice</string>
    <string name="btn_rcp">Voir le résumé des caractéristique du produit</string>
    <string name="ph_formepharma">formePharma</string>
    <string name="ph_totreAvis">bonjour</string>
    <string name="ph_nomAvis">bonjour</string>
    <string name="ph_nomSubstance">bonjour</string>
    <string name="ph_details_avis">Details avis</string>
    <string name="ph_description_interaction">Description</string>
    <string name="ph_conseil_interaction">Conseil</string>
    <string name="title_activity_history">Médicaments scannés</string>
    <string name="ph_dateScan">dateScan</string>
    <string name="supprimer_tout">Supprimer tout</string>
</resources>
