<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        card_view:cardCornerRadius="1dp">


        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:columnCount="2"
            android:paddingEnd="15dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingStart="15dp">

            <LinearLayout
                android:layout_width="70dp"
                android:layout_height="match_parent"
                android:layout_column="1"
                android:layout_gravity="center"
                android:layout_rowSpan="20"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingBottom="15dp"
                android:paddingTop="15dp">

                <ImageView
                    android:id="@+id/image"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_marginBottom="15dp"
                    android:adjustViewBounds="false"
                    android:scaleType="centerInside"
                    android:src="@mipmap/ic_launcher_round"></ImageView>

                <ImageView
                    android:id="@+id/image1"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_marginBottom="15dp"
                    android:adjustViewBounds="false"
                    android:scaleType="centerInside"
                    android:src="@mipmap/ic_launcher_round"></ImageView>

                <ImageView
                    android:id="@+id/image2"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_marginBottom="15dp"
                    android:adjustViewBounds="false"
                    android:scaleType="centerInside"
                    android:src="@mipmap/ic_launcher_round"></ImageView>

            </LinearLayout>

            <TextView
                android:id="@+id/nomSpecialite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_marginTop="8dp"
                android:width="280dp"
                android:maxLines="2"
                android:maxWidth="280dp"
                android:text="@string/ph_nomSpecialite" />

            <TextView
                android:id="@+id/libellePresentation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_marginTop="8dp"
                android:maxLines="2"
                android:maxWidth="280dp"
                android:text="@string/ph_libellePresentation" />


            <GridLayout
                android:layout_column="0"
                android:layout_gravity="fill_horizontal"
                android:layout_marginTop="8dp"
                android:columnCount="2">


                <TextView
                    android:id="@+id/labelExp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:text="@string/expiration" />

                <TextView
                    android:id="@+id/dateExpiration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:text="@string/ph_date" />

            </GridLayout>

            <GridLayout
                android:layout_column="0"
                android:layout_gravity="fill_horizontal"
                android:layout_marginTop="8dp"
                android:columnCount="2">

                <TextView
                    android:id="@+id/labelLot"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:text="@string/lot_n" />

                <TextView
                    android:id="@+id/lot"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:text="@string/ph_lot" />

            </GridLayout>

            <TextView
                android:id="@+id/conditionPrescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_marginTop="8dp"
                android:text="@string/ph_conditionprescription" />

            <Button
                android:id="@+id/notice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:background="@color/zxing_transparent"
                android:onClick="voirNotice"
                android:text="@string/btn_voir_la_notice" />

        </GridLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>
